# chip8emulator

./: .gitignore  README.md  chip8emulator.sln  makefile
Chip8EmulatorLauncher/: App.axaml  App.axaml.cs  Chip8EmulatorLauncher.csproj  Form1.Designer.cs  Form1.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
chip8emulator/: CMakeLists.txt  chip8emulator.vcxproj  chip8emulator.vcxproj.filters
chip8emulator/include/: Chip8HW.h  Chip8_CPU.h  Chip8_Keyboard.h  Chip8_Memory.h  Chip8_Screen.h  Logger.h
chip8emulator/src/: Chip8HW.cpp  Chip8_CPU.cpp  Chip8_Keyboard.cpp  Chip8_Memory.cpp  Chip8_Screen.cpp  Logger.cpp  main.cpp
misc/wavegen/: README.txt  wavegen.cpp
